# seekingaura-wow-guides

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: sphinx-docs.yml
docs/: CNAME  requirements.txt
docs/source/: conf.py  glossary.rst  index.rst  install.rst  install_ubuntu.rst  license.rst  optimization.rst
docs/source/_ext/: wowtooltip.py
docs/source/_templates/: layout.html
docs/source/install/: install_windows.rst
